# ah

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: formula.rb.tmpl  release.yml
.github/workflows/: auto-tag.yml  ci.yml  pr-labeler.yml  release.yml
demo/: README.md  demo-pre.tape  demo.tape  gen_claude_sessions.py  setup.sh  teardown.sh
src/: cli.rs  collector.rs  color.rs  config.rs  fuzzy.rs  main.rs  man.rs  memory.rs  output.rs  pager.rs  pipeline.rs  projects.rs  remote.rs  resolver.rs  resume.rs  search.rs  session.rs  show.rs  subcmd.rs
src/agents/: claude.rs  codex.rs  common.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs
tests/: cli.rs  snapshots.rs
tests/fixtures/: claude_session.jsonl  claude_user_array.jsonl  codex_session.jsonl  cursor_session.jsonl  cursor_user_query.jsonl  gemini_session.json
tests/snapshots/: snapshots__snapshot_help_agent.snap  snapshots__snapshot_help_completion.snap  snapshots__snapshot_help_list_agents.snap  snapshots__snapshot_help_log.snap  snapshots__snapshot_help_memory.snap  snapshots__snapshot_help_project.snap  snapshots__snapshot_help_resume.snap  snapshots__snapshot_help_show.snap  snapshots__snapshot_help_top.snap  snapshots__snapshot_readme.snap
