[package]
name = "ah-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/nihen/ah"
description = "Agent History Search - cross-agent session full-text search CLI"
keywords = ["cli", "search", "ai", "session", "history"]
categories = ["command-line-utilities"]
exclude = ["demo/", ".github/", "AGENTS.md"]

[[bin]]
name = "ah"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
regex = "1"
memchr = "2"
rayon = "1"
chrono = "0.4"
memmap2 = "0.9"
dirs = "6"
libc = "0.2"
sha2 = "0.10"
unicode-width = "0.2.2"
clap_mangen = "0.2.33"

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
insta = "1"
tempfile = "3"
